set drawer overflow-y to hidden, fixes scrollbars appearing in IE

--- a/sites/all/themes/custom/capl/assets/css/style.css
+++ b/sites/all/themes/custom/capl/assets/css/style.css
@@ -1233,7 +1233,7 @@ label[for="nav-trigger"] .icon-bar {
   opacity: 0;
   min-height: 100%;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: hidden;
   padding-bottom: 1em;
   padding-top: 1em;
   position: fixed;
