--- a/sites/all/themes/custom/capl/assets/sass/partials/_menu.scss
+++ b/sites/all/themes/custom/capl/assets/sass/partials/_menu.scss
@@ -59,7 +59,7 @@ label[for="nav-trigger"] {
   opacity: 0;
   min-height: 100%;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: hidden;
   padding-bottom: 1em;
   padding-top: 1em;
   position: fixed;
